<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Email App</string>
    <string name="action_settings">Settings</string>
    <string name="title">Email App</string>
    <string name="description">Use this form to create and send email</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="cc">cc</string>
    <string name="bcc">bcc</string>
    <string name="subject">subject</string>
    <string name="body">body</string>
    <string name="button_send">Send</string>
    <string name="button_clear">Clear</string>
    <string name="button_back">Back</string>
    <string name="email_data_file_key">email_data_file_key</string>
    <string name="title_activity_read_email">ReadEmail</string>
    <string name="invalid_from_email">Invalid from email address</string>
    <string name="invalid_to_email">Invalid to email address</string>
    <string name="invalid_cc_email">Invalid cc email address</string>
    <string name="invalid_bcc_email">Invalid bcc email address</string>
    <string name="invalid_subject">Subject cannot be empty</string>
    <string name="invalid_body">Body cannot be empty</string>

</resources>