<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="#fff8dcff"
    android:clickable="true">

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity"
        android:id="@+id/main">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:id="@+id/title"
            android:textStyle="bold"
            android:textSize="50dp"
            android:textColor="#ff6eff1d" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:id="@+id/description"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="#ffff1119" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:id="@+id/from_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/from"
            android:nextFocusDown="@+id/to"
            android:singleLine ="true"
            android:layout_weight="0"
            android:textColorHint="#ff2c8aff"
            android:textIsSelectable="false" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <EditText
            android:id="@+id/from"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/from"
            android:nextFocusDown="@+id/to"
            android:singleLine ="true"
            android:layout_weight="0"
            android:inputType="textEmailAddress" />


        <TextView
            android:id="@+id/to_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/to"
            android:nextFocusDown="@+id/cc"
            android:singleLine ="true"
            android:layout_weight="0"
            android:textColorHint="#ff2c8aff" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <EditText
            android:id="@+id/to"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/to"
            android:nextFocusDown="@+id/cc"
            android:singleLine ="true"
            android:layout_weight="0"
            android:inputType="textEmailAddress" />



        <TextView
            android:id="@+id/cc_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cc"
            android:nextFocusDown="@+id/subjet"
            android:singleLine ="true"
            android:layout_weight="0"
            android:textColorHint="#ff2c8aff" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <EditText
            android:id="@+id/cc"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cc"
            android:nextFocusDown="@+id/bcc"
            android:singleLine ="true"
            android:layout_weight="0"
            android:inputType="textEmailAddress" />




        <TextView
            android:id="@+id/bcc_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/bcc"
            android:nextFocusDown="@+id/subject"
            android:singleLine ="true"
            android:layout_weight="0"
            android:textColorHint="#ff2c8aff" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <EditText
            android:id="@+id/bcc"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/bcc"
            android:nextFocusDown="@+id/subject"
            android:singleLine ="true"
            android:layout_weight="0"
            android:inputType="textEmailAddress" />



        <TextView
            android:id="@+id/subject_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/subject"
            android:singleLine ="true"
            android:layout_weight="0"
            android:textColorHint="#ff2c8aff" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>


        <EditText
            android:id="@+id/subject"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/subject"
            android:nextFocusDown="@+id/body"
            android:singleLine ="true"
            android:layout_weight="0"
            android:inputType="textShortMessage" />




        <TextView
            android:id="@+id/body_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:singleLine ="true"
            android:hint="@string/body"
            android:layout_weight="0"
            android:textColorHint="#ff2c8aff" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:background="#fff8dcff"
            android:clickable="true">

        <EditText
            android:id="@+id/body"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/body"
            android:nextFocusDown="@+id/send_button"
            android:singleLine ="false" />
        </ScrollView>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            tools:context=".MainActivity"
            android:id="@+id/buttons">

            <Button
                android:id="@+id/send_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_send"
                android:onClick="sendMessage"/>
            <Button
                android:id="@+id/clear_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_clear"
                android:onClick="clearForm"/>
        </LinearLayout>



    </TableLayout>
</ScrollView>